--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,20 @@
 <!-- Cookie Consent Popup -->
 <div id="cookie-consent">
     <p>This website uses cookies to ensure you get the best experience. By using our website, you agree to our use of cookies. <a href="terms.html">Learn more</a></p>
-    <button onclick="acceptCookies()">Got it!</button>
 </div>
 
-<h1>ColorizeAI</h1>
-<form action="/" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" accept="image/*" required>
-    <button type="submit">Colorize</button>
-</form>
+<div class="main-centered">
+    <h1 class="rainbowText">ColorizeAI</h1>
+    <form action="/" method="post" enctype="multipart/form-data">
+        <input type="file" name="file" accept="image/*" required>
+        <button type="submit">Colorize</button>
+    </form>
+</div>
+
 {% if error %}
     <p>{{ error }}</p>
 {% endif %}
+
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
