--- a/templates/result.html
+++ b/templates/result.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ColorizeAI Result</title>
-     <style>
+    <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
@@ -14,6 +14,7 @@
 
         h1 {
             color: #333;
+            margin-top: 50px;
         }
 
         p {
@@ -21,22 +22,81 @@
             margin-bottom: 20px;
         }
 
-        img {
-            max-width: 50%;
-            height: auto;
+        .home-link {
+            margin-top: 70px;
+            display: inline-block;
+            padding: 10px 20px;
+            text-decoration: none;
+            background-color: #3498db;
+            color: #fff;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .home-link:hover {
+            background-color: #2980b9;
+        }
+
+        .image-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             margin-top: 20px;
+        }
+
+        img {
+            width: 100%; 
+            height: auto; 
+            max-width: 400px; 
+            max-height: 400px;
+        }
+
+        #cookie-consent {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+
+        #cookie-consent a {
+            color: #fff;
+            text-decoration: underline;
+        }
+
+        #cookie-consent button {
+            background: #fff;
+            color: #333;
+            padding: 5px 10px;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
+
 <body>
     <h1>ColorizeAI Result</h1>
 
-    <!-- Display the input image -->
-    <h2>Input Image</h2>
-    <img src="{{ url_for('uploaded_file', filename=input_image) }}" alt="Input Image">
+    <!-- Display the input and colorized images side by side -->
+    <div class="image-container">
+        <div>
+            <h2>Input Image</h2>
+            <img src="{{ url_for('uploaded_file', filename=input_image) }}" alt="Input Image">
+        </div>
 
-    <!-- Display the colorized image -->
-    <h2>Colorized Image</h2>
-    <img src="{{ url_for('uploaded_file', filename=colorized_image) }}" alt="Colorized Image">
+        <div>
+            <h2>Colorized Image</h2>
+            <img src="{{ url_for('uploaded_file', filename=colorized_image) }}" alt="Colorized Image">
+        </div>
+    </div>
+
+    <a class="home-link" href="">New Image</a>
+
+    <div id="cookie-consent">
+        <p>This website uses cookies to ensure you get the best experience. By using our website, you agree to our use of cookies. <a href="terms.html">Learn more</a></p>
+    </div>
 </body>
+
 </html>
