--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,10 @@
 
 <!-- Cookie Consent Popup -->
 <div id="cookie-consent">
-    <p>This website uses cookies to ensure you get the best experience. By using our website, you agree to our use of cookies. <a href="terms.html">Learn more</a></p>
+    <p>Disclaimer: The images on this site have been artificially colorized using artificial intelligence. 
+        The colorization process may not always accurately reflect the original colors of the images. 
+        The results are generated based on the AI's interpretation and may not represent reality. 
+        Use this service at your own discretion. <a href="terms.html">Learn more</a> and <a href="terms.html">Tems of Service</a></p>
 </div>
 
 <div class="main-centered">
