--- a/templates/result.html
+++ b/templates/result.html
@@ -60,13 +60,17 @@
             text-align: center;
         }
 
+        #cookie-consent p {
+            padding-right: 15px;
+        }
+
         #cookie-consent a {
-            color: #fff;
+            color: #d4d4d4;
             text-decoration: underline;
         }
 
         #cookie-consent button {
-            background: #fff;
+            background: #d4d4d4;
             color: #333;
             padding: 5px 10px;
             border: none;
@@ -94,7 +98,10 @@
     <a class="home-link" href="">New Image</a>
 
     <div id="cookie-consent">
-        <p>This website uses cookies to ensure you get the best experience. By using our website, you agree to our use of cookies. <a href="terms.html">Learn more</a></p>
+        <p>Disclaimer: The images on this site have been artificially colorized using artificial intelligence. 
+            The colorization process may not always accurately reflect the original colors of the images. 
+            The results are generated based on the AI's interpretation and may not represent reality. 
+            Use this service at your own discretion. <a href="terms.html">Learn more</a> and <a href="terms.html">Tems of Service</a></p>
     </div>
 </body>
 
