--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,9 @@
     <p>Disclaimer: The images on this site have been artificially colorized using artificial intelligence. 
         The colorization process may not always accurately reflect the original colors of the images. 
         The results are generated based on the AI's interpretation and may not represent reality. 
-        Use this service at your own discretion. <a href="terms.html">Learn more</a> and <a href="terms.html">Tems of Service</a></p>
+        Use this service at your own discretion.
+        <br>
+        <a href="terms.html">Learn more</a> and <a href="terms.html">Tems of Service</a></p>
 </div>
 
 <div class="main-centered">
