--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -31,7 +31,7 @@
                 The results are generated based on the AI's interpretation and may not represent reality.
                 Use this service at your own discretion.
                 <br>
-                <a href="terms.html">Learn more</a> and <a href="terms.html">Tems of Service</a>
+                <a href="terms.html">Learn more</a> and <a href="terms.html">Terms of Service</a>
             </p>
         </div>
     </footer>
